--- a/students/dunaieva_alona/28-obj/src/index.html
+++ b/students/dunaieva_alona/28-obj/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum=scale=1">
-    <title>Blog</title>
+    <title>Object</title>
 </head>
 
 <body class="page">
