some files have been changed

--- a/students/dunaieva_alona/18_responsive_web_design/src/_header.html
+++ b/students/dunaieva_alona/18_responsive_web_design/src/_header.html
@@ -1,7 +1,7 @@
 <header class="header">
     <div class="container header__container">
         <div class="logo">
-            <img class="logo_image" src="images/logo.svg" alt="Productly">
+            <img class="logo_image" src="images/header-footer/logo.svg" alt="Productly">
         </div>
         <nav class="menu-wrapper">
             <ul class="menu">
@@ -19,7 +19,7 @@
                 </li>
             </ul>
         </nav>
-        <div class="auth hidden-md">
+        <div class="auth">
             <a class="auth__link btn btn-secondary btn-small" href="#">Sign In</a>
             <a class="auth__link btn btn-primary btn-small" href="#">Sign Up</a>
         </div>
