--- a/students/dunaieva_alona/18_responsive_web_design/src/index.html
+++ b/students/dunaieva_alona/18_responsive_web_design/src/index.html
@@ -9,13 +9,13 @@
 </head>
 
 <body class="page">
-    @@include("_header.html");
+    @@include("_header.html")
     <main class="main">
-        @@include("_hero.html");
-        @@include("_tools.html");
-        @@include("_design.html");
-        @@include("_manager.html");
-        @@include("_marketers.html");
+        @@include("_hero.html")
+        @@include("_tools.html")
+        @@include("_design.html")
+        @@include("_manager.html")
+        @@include("_marketers.html")
     </main>
     @@include("_footer.html")
 </body>
