--- a/students/savchak_marharyta/11_flexbox/index.html
+++ b/students/savchak_marharyta/11_flexbox/index.html
@@ -8,7 +8,7 @@
     <title>Productly</title>
 </head>
 
-<body>
+<body class="page">
     <header class="header container ">
         <div class="logo ">
             <div class="logo__wrapper">
@@ -62,7 +62,7 @@
                 <div class="col-3">
                     <div class="quality">
                         <div class="quality__image-wrapper">
-                            <img src="images/icon (2).svg" alt="click icon">
+                            <img src="images/icon (3).svg" alt="click icon">
                         </div>
                         <h4 class="quality__title">First click tests</h4>
                         <p class="quality__text">While most people enjoy casino <br> gambling,</p>
@@ -71,7 +71,7 @@
                 <div class="col-3">
                     <div class="quality">
                         <div class="quality__image-wrapper">
-                            <img src="images/icon (3).svg" alt="click icon">
+                            <img src="images/icon (2).svg" alt="click icon">
                         </div>
                         <h4 class="quality__title">Design surveys</h4>
                         <p class="quality__text">Sports betting, lottery and bingo playing for the fun</p>
@@ -99,10 +99,49 @@
             <div class="button-wrapper">
                 <a href="#" class="first-section__button big-orange__button">Sign up Now</a>
             </div>
-
         </section>
     </main>
+    <footer class="footer container">
+        <div class="footer__wrapper">
+            <div class="row">
+                <div class="col-4">
+                    <div class="logo__wrapper">
+                        <img src="" alt="" class="logo__img">
+                    </div>
+                    <div class="logo__wrapper">
+                        <img src="" alt="" class="logo__img-text">
+                    </div>
+                </div>
+                <div class="col-4">
+                    <h3 class="footer__section-title">Quick Links</h3>
+                    <p class="footer__text">About Us</p>
+                    <p class="footer__text">Blog</p>
+                    <p class="footer__text">Contact</p>
+                    <p class="footer__text">FAQ</p>
+                </div>
+                <div class="col-4">
+                    <h3 class="footer__section-title">Legal Stuff</h3>
+                    <p class="footer__text">Disclaimer</p>
+                    <p class="footer__text">Financing</p>
+                    <p class="footer__text">Privacy Policy</p>
+                    <p class="footer__text">Terms of Service</p>
+                </div>
+                <div class="col-4">
+                    <h3 class="footer__section-title">Knowing you're always on <br> the best energy deal.
+                    </h3>
+                    <div class="footer__form-text-wrapper">
+                        <p class="footer__form-text">Enter your phone Number</p>
+                    </div>
+                    <div class="footer__button-wrapper">
+                        <a href="#" class="footer__button big-orange__button">
+                            Sign up Now
+                        </a>
+                    </div>
+                </div>
+            </div>
 
+        </div>
+    </footer>
 </body>
 
 </html>
