footer_finaly_edited

--- a/students/savchak_marharyta/11_flexbox/index.html
+++ b/students/savchak_marharyta/11_flexbox/index.html
@@ -101,15 +101,15 @@
             </div>
         </section>
     </main>
-    <footer class="footer container">
-        <div class="footer__wrapper">
-            <div class="row">
+    <footer class="footer">
+        <div class="footer__wrapper container">
+            <div class="footer__row">
                 <div class="col-4">
                     <div class="logo__wrapper">
-                        <img src="" alt="" class="logo__img">
+                        <img src="images/Bitmap.png" alt="" class="logo__img">
                     </div>
                     <div class="logo__wrapper">
-                        <img src="" alt="" class="logo__img-text">
+                        <img src="images/Productly.svg" alt="" class="logo__img-text">
                     </div>
                 </div>
                 <div class="col-4">
@@ -127,11 +127,9 @@
                     <p class="footer__text">Terms of Service</p>
                 </div>
                 <div class="col-4">
-                    <h3 class="footer__section-title">Knowing you're always on <br> the best energy deal.
+                    <h3 class="footer__section-title last-column">Knowing you're always on <br> the best energy deal.
                     </h3>
-                    <div class="footer__form-text-wrapper">
-                        <p class="footer__form-text">Enter your phone Number</p>
-                    </div>
+                    <input type="text" class="footer__input" value="Enter your phone Number">
                     <div class="footer__button-wrapper">
                         <a href="#" class="footer__button big-orange__button">
                             Sign up Now
