added const for text

--- a/students/dunaieva_alona/23_js_base/index.html
+++ b/students/dunaieva_alona/23_js_base/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JS Base</title>
     <script></script>
 </head>
 <body>
+    <p>JS Base</p>
     <a href="javascript: alert('ok')">ok</a>
     <script></script>
     <script src="js/script.js"></script>
