--- a/students/savchak_marharyta/12_positioning_transforming/index.html
+++ b/students/savchak_marharyta/12_positioning_transforming/index.html
@@ -7,7 +7,14 @@
     <title>Positioning</title>
 </head>
 
-<body>
+<body class="page">
+    <header class="header">
+        <nav class="nav">
+            <p class="nav__lang-change">ENG</p>
+            <p></p>
+
+        </nav>
+    </header>
 
 </body>
 
