Edited 19.09, small changes

--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/_hero-block.html
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/_hero-block.html
@@ -6,7 +6,7 @@
                     <h1 class="hero-block__title">Bhromaon<br><span class="hero-block__subtitle">Safe Travel
                             Anywhere</span></h1>
                     <form class="hero-block__search search" action="#" method="get">
-                        <input type="text" maxlength="50" name="input" class="search__input"
+                        <input type="text" name="input" class="search__input"
                             placeholder="Search Your Travel Destination">
                         <div class="search-button__container">
                             <button class="search-button__button" type="submit">
