--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/_what-say.html
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/_what-say.html
@@ -7,7 +7,7 @@
         </div>
         <div class="row">
             <div class="col-4 col-md-12 what-say__img-wrapper">
-                <img class="what-say__img" src="images/man-tourist.png" alt="tourist image">
+                <img class="what-say__img" src="images/man-tourist.jpg" alt="tourist image">
             </div>
             <div class="col-8 col-md-12">
                 <div class="what-say__wrapper what-say-item">
