--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/index.html
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/index.html
@@ -10,9 +10,12 @@
 </head>
 
 <body class="page">
-    <main class="main">
+    <header class="header">
         @@include('_hero-block.html')
         @@include('_nav.html')
+    </header>
+
+    <main class="main">
         @@include('_why-choose-us.html')
         @@include('_steps.html')
         @@include('_house-spain.html')
