--- a/students/umienchuk_oksana/project_second_monticello/src/html/_socials.html
+++ b/students/umienchuk_oksana/project_second_monticello/src/html/_socials.html
@@ -1,3 +1,20 @@
-<section>
-    _socials
+<section class="social">
+    <!-- треба додати клас, щоб всі іконки ставали зліва -->
+    <ul class="social-icons">
+        <li class="social-icon">
+            <a href="#" class="social-icon__link">
+                <img src="../images/facebook.svg" alt="facebook" class="social-icon__img">
+            </a>
+        </li>
+        <li class="social-icon">
+            <a href="#" class="social-icon__link">
+                <img src="../images/twitter.svg" alt="twitter" class="social-icon__img">
+            </a>
+        </li>
+        <li class="social-icon">
+            <a href="#" class="social-icon__link">
+                <img src="../images/instagram.svg" alt="instagram" class="social-icon__img">
+            </a>
+        </li>
+    </ul>
 </section>
