--- a/students/hridina_anastasiia/exam_project_2/src/_footer.html
+++ b/students/hridina_anastasiia/exam_project_2/src/_footer.html
@@ -47,17 +47,22 @@
     <div class="footer__links">
         <img class="ftr__logo" src="./images/logo_mont.png" alt="Logo">
         <p class="ftr__copyright">Copyrights © 2020 Montichello</p>
-        <a href="#"><svg class="social__svg" xmlns="http://www.w3.org/2000/svg" width="40" height="40"
-                viewBox="0 0 40 40" fill="none">
-                <circle opacity="0.4" cx="20" cy="20" r="19.5" stroke="white" />
-            </svg></a>
-        <a href="#"><svg class="social__svg" xmlns="http://www.w3.org/2000/svg" width="40" height="40"
-                viewBox="0 0 40 40" fill="none">
-                <circle opacity="0.4" cx="20" cy="20" r="19.5" stroke="white" />
-            </svg></a>
-        <a href="#"><svg class="social__svg" xmlns="http://www.w3.org/2000/svg" width="40" height="40"
-                viewBox="0 0 40 40" fill="none">
-                <circle opacity="0.4" cx="20" cy="20" r="19.5" stroke="white" />
-            </svg></a>
+        <div class="footer__links">
+            <a href="#" class="social__item_ftr">
+                <svg class="social__svg_ftr">
+                    <use xlink:href="./images/facebook__icon.svg#facebook"></use>
+                </svg>
+            </a>
+            <a href="#" class="social__item_ftr">
+                <svg class="social__svg_ftr">
+                    <use xlink:href="./images/twitter__icon.svg#twitter"></use>
+                </svg>
+            </a>
+            <a href="#" class="social__item_ftr">
+                <svg class="social__svg_ftr">
+                    <use xlink:href="./images/instagram__icon.svg#instagram"></use>
+                </svg>
+            </a>
+        </div>
     </div>
 </div>
