--- a/students/hridina_anastasiia/exam_project_2/src/_hero_block.html
+++ b/students/hridina_anastasiia/exam_project_2/src/_hero_block.html
@@ -20,32 +20,40 @@
             </nav>
             <div class="social__links">
                 <a href="#" class="social__item">
-                    <svg class="social__svg" xmlns="http://www.w3.org/2000/svg" width="40" height="40"
-                        viewBox="0 0 40 40" fill="none">
-                        <circle opacity="0.4" cx="20" cy="20" r="19.5" stroke="white" />
+                    <svg class="social__svg">
+                        <use xlink:href="./images/facebook__icon.svg#facebook"></use>
                     </svg>
                 </a>
                 <a href="#" class="social__item">
-                    <svg class="social__svg" xmlns="http://www.w3.org/2000/svg" width="40" height="40"
-                        viewBox="0 0 40 40" fill="none">
-                        <circle opacity="0.4" cx="20" cy="20" r="19.5" stroke="white" />
+                    <svg class="social__svg">
+                        <use xlink:href="./images/twitter__icon.svg#twitter"></use>
                     </svg>
                 </a>
                 <a href="#" class="social__item">
-                    <svg class="social__svg" xmlns="http://www.w3.org/2000/svg" width="40" height="40"
-                        viewBox="0 0 40 40" fill="none">
-                        <circle opacity="0.4" cx="20" cy="20" r="19.5" stroke="white" />
+                    <svg class="social__svg">
+                        <use xlink:href="./images/instagram__icon.svg#instagram"></use>
                     </svg>
                 </a>
             </div>
             <div class="hero__title">
-                <h1 class="title__heading">SIMPLE &amp; MODERN</h1>
+                <h1 class="title__heading first">SIMPLE &amp; MODERN</h1>
                 <p class="title__text">WE MAKE THE WORLD BEAUTIFUL EVERYDAY</p>
-                <svg xmlns="http://www.w3.org/2000/svg" width="42" height="40" viewBox="0 0 42 40" fill="none">
-                    <path class="title_svg" opacity="0.7"
-                        d="M40.5447 20C40.5447 30.7685 31.7958 39.5 21.0011 39.5C10.2064 39.5 1.45746 30.7685 1.45746 20C1.45746 9.23147 10.2064 0.5 21.0011 0.5C31.7958 0.5 40.5447 9.23147 40.5447 20Z"
-                        stroke="white" />
-                </svg>
+            </div>
+            <div class="hero__title">
+                <h1 class="title__heading second">COZY &amp; CREATIVE</h1>
+                <p class="title__text second-item">DESIGN OF DISTINCTION INSPIRED BY IMAGINATION</p>
+            </div>
+            <div class="hero__title">
+                <h1 class="title__heading third">HIGH QUALITY &amp; CUSTOMISABLE</h1>
+                <p class="title__text third-item">RISING ABOVE EXPECTATIONS</p>
+            </div>
+            <div class="hero__title">
+                <h1 class="title__heading fourth">BUILD &amp; INSPIRE</h1>
+                <p class="title__text fourth-item">WE ARE A POSSIBILITIES COMPANY</p>
+            </div>
+            <div class="hero__title">
+                <h1 class="title__heading fifth">INNOVATIVE ARCHITECTURE</h1>
+                <p class="title__text fifth-item">A NEW VISION OF ARCHTECTURE AND DESIGN</p>
             </div>
         </div>
     </div>
