--- a/students/umienchuk_oksana/project_second_monticello/src/html/_socials.html
+++ b/students/umienchuk_oksana/project_second_monticello/src/html/_socials.html
@@ -3,17 +3,23 @@
     <ul class="social-icons">
         <li class="social-icon">
             <a href="#" class="social-icon__link">
-                <img src="../images/facebook.svg" alt="facebook" class="social-icon__img">
+                <svg class="icon-img">
+                    <use xlink:href="#facebook" />
+                </svg>
             </a>
         </li>
         <li class="social-icon">
             <a href="#" class="social-icon__link">
-                <img src="../images/twitter.svg" alt="twitter" class="social-icon__img">
+                <svg class="icon-img">
+                    <use xlink:href="#twitter" />
+                </svg>
             </a>
         </li>
         <li class="social-icon">
             <a href="#" class="social-icon__link">
-                <img src="../images/instagram.svg" alt="instagram" class="social-icon__img">
+                <svg class="icon-img">
+                    <use xlink:href="#instagram" />
+                </svg>
             </a>
         </li>
     </ul>
