--- a/students/umienchuk_oksana/project_second_monticello/src/html/header/_header.html
+++ b/students/umienchuk_oksana/project_second_monticello/src/html/header/_header.html
@@ -1,32 +1,46 @@
 <section class="header">
     @@include("./_nav.html")
-    <div class="container">
-        <div class="slider">
-            <div class="slider__block">
+    <div class="slider">
+        <div class="slider__block">
+            <img class="slider__img" src="../../images/background-hero-01.jpg" alt="Building">
+            <div class="slider__text">
                 <h1 class="slider__title">SIMPLE & MODERN</h1>
                 <p class="slider__sub-text">WE MAKE THE WORLD BEAUTIFUL EVERYDAY</p>
             </div>
-            <div class="slider__block">
+        </div>
+        <div class="slider__block">
+            <img class="slider__img" src="../../images/background-hero-01.jpg" alt="Building">
+            <div class="slider__text">
                 <h2 class="slider__sub-title">Elevating Everyday Life</h2>
                 <p class="slider__sub-text">Creating Beauty with Simplicity and Modernity</p>
             </div>
-            <div class="slider__block">
+        </div>
+        <div class="slider__block">
+            <img class="slider__img" src="../../images/background-hero-02.jpg" alt="Building">
+            <div class="slider__text">
                 <h2 class="slider__sub-title">Our Daily Mission</h2>
                 <p class="slider__sub-text">Infusing the World with Simple, Modern Beauty</p>
             </div>
-            <div class="slider__block">
+        </div>
+        <div class="slider__block">
+            <img class="slider__img" src="../../images/background-hero-03.jpg" alt="Building">
+            <div class="slider__text">
                 <h2 class="slider__sub-title">Beauty Unveiled Daily</h2>
                 <p class="slider__sub-text">A Simple, Modern Approach</p>
             </div>
-            <div class="slider__block">
+        </div>
+        <div class="slider__block">
+            <img class="slider__img" src="../../images/background-hero-04.jpg" alt="Building">
+            <div class="slider__text">
                 <h2 class="slider__sub-title">Everyday Beauty Redefined</h2>
                 <p class="slider__sub-text">A Touch of Modern Simplicity</p>
             </div>
         </div>
-        <div class="anchor-down-click">
-            <svg class="steps__icon icon-img icon-blue">
+    </div>
+    <div class="anchor-down-click">
+        <a href="#anchor-down-click"><svg class="icon-img">
                 <use xlink:href="#click-down" />
             </svg>
-        </div>
+        </a>
     </div>
 </section>
