--- a/students/umienchuk_oksana/project_second_monticello/src/html/header/_header.html
+++ b/students/umienchuk_oksana/project_second_monticello/src/html/header/_header.html
@@ -2,7 +2,7 @@
     @@include("./_nav.html")
     <div class="slider">
         <div class="slider__block">
-            <img class="slider__img" src="../../images/background-hero-01.jpg" alt="Building">
+            <img class="slider__img" src="../../images/background-hero.jpg" alt="Building">
             <div class="slider__text">
                 <h1 class="slider__title">SIMPLE & MODERN</h1>
                 <p class="slider__sub-text">WE MAKE THE WORLD BEAUTIFUL EVERYDAY</p>
