--- a/students/umienchuk_oksana/project_second_monticello/src/index.html
+++ b/students/umienchuk_oksana/project_second_monticello/src/index.html
@@ -10,11 +10,10 @@
 
 <body>
     @@include("./html/header/_header.html")
-    <main class="main" style="background-color: red;">
-        @@include("./html/main/_projects.html")
-        @@include("./html/main/_news.html")
-        @@include("./html/main/_gallery.html")
-        @@include("./html/main/_map.html")
+    <main class="main">
+        @@include("./html/_projects.html")
+        @@include("./html/_news.html")
+        @@include("./html/_gallery.html")
     </main>
     @@include("./html/_footer.html")
 
