html_header_done

--- a/students/savchak_marharyta/exam_1/src/header.html
+++ b/students/savchak_marharyta/exam_1/src/header.html
@@ -1,3 +1,11 @@
 <header class="header">
-
+    <h2 class="header__title">bhromaon</h2>
+    <nav class="nav">
+        <ul class="menu">
+            <li class="menu__item">who we are</li>
+            <li class="menu__item">what we do</li>
+            <li class="menu__item">travel with us</li>
+            <li class="menu__item">contact us</li>
+        </ul>
+    </nav>
 </header>
