--- a/students/savchak_marharyta/exam_1/src/why_choose_us.html
+++ b/students/savchak_marharyta/exam_1/src/why_choose_us.html
@@ -1,3 +1,22 @@
 <section class="why-choose-us">
-
+    <div class="container">
+        <div class="row">
+            <div class="col-6">
+                <h2 class="why-choose-us__title">Why Choose Us</h2>
+                <p class="why-choose-us__text">Tion and dislike men who are so
+                    beguiled and demoralized by desire by the charms of pleasure
+                    of the moment, so blinded by desire, that they cannot foresee</p>
+                <p class="why-choose-us__text">Ddislike men who are so beguiled and
+                    demoralized by the charms of pleasure of the moment, so blinded by
+                    desire, that.</p>
+                <div class="why-choose-us__button-wrapper">
+                    <a href="#" class="why-choose-us__button">Explore Places</a>
+                </div>
+            </div>
+            <div class="col-4">
+                <img src="" alt="" class="why-choose-us__img">
+                <img src="" alt="" class="why-choose-us__img">
+            </div>
+        </div>
+    </div>
 </section>
