img_added_img_name_change_section_tip_added

--- a/students/savchak_marharyta/exam_1/src/index.html
+++ b/students/savchak_marharyta/exam_1/src/index.html
@@ -12,6 +12,7 @@
     @@include('./heroblock.html')
     @@include('./header.html')
     @@include('./why_choose_us.html')
+    @@include('./tip.html')
     @@include('./places.html')
     @@include('./testimonial.html')
     @@include('./footer.html')
