html_testimonial_done

--- a/students/savchak_marharyta/exam_1/src/testimonial.html
+++ b/students/savchak_marharyta/exam_1/src/testimonial.html
@@ -1,1 +1,21 @@
-<section class="testimonial"></section>
+<section class="testimonial">
+    <div class="container">
+        <div class="row">
+            <h2 class="testimonial__title">What Our Tourists Say</h2>
+        </div>
+        <div class="row">
+            <div class="col-4">
+                <img class="testimonial__img" src="images/testimonial-img.png" alt="Sam Sumon photo">
+            </div>
+            <div class="col-8">
+                <h3 class="testimonial__name">sam sumon</h3>
+                <p class="testimonial__text"> But I must explain to you how all
+                    this mistaken idea of account to denouncinpleasure and praising pain
+                    But I must explain to you how all this mistaken idea of account
+                    to nai denouncing pleasure and praising pain was account born and I
+                    account will give you a complete account of the system was account born
+                    and I account will give you a nai the complete account of the system</p>
+            </div>
+        </div>
+    </div>
+</section>
