html_footer_done

--- a/students/savchak_marharyta/exam_1/src/footer.html
+++ b/students/savchak_marharyta/exam_1/src/footer.html
@@ -1,1 +1,15 @@
-<footer class="footer"></footer>
+<footer class="footer">
+    <div class="container">
+        <div class="row">
+            <h3 class="footer__title">bhromaon</h3>
+            <p class="footer__moto">Safe Travel Anywhere</p>
+        </div>
+        <div class="row">
+            <img src="images/facebook-f.svg" alt="Facebook" class="footer__img">
+            <img src="images/twitter.svg" alt="Twitter" class="footer__img">
+            <img src="images/linkedin.svg" alt="LinkedIn" class="footer__img">
+            <img src="images/youtube.svg" alt="YouTube" class="footer__img">
+            <img src="images/pinterest.svg" alt="Pinterest" class="footer__img">
+        </div>
+    </div>
+</footer>
