--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_hero-block.html
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_hero-block.html
@@ -1,34 +1,12 @@
-<section class="hero-block">
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <div class="hero-block-wrapper">
-                    <h1 class="hero-block__title">Bhromaon<br><span class="hero-block__subtitle">Safe Travel
-                            Anywhere</span></h1>
-                    <form class="hero-block__search search" action="#" method="get">
-                        <input type="text" name="input" class="search__input"
-                            placeholder="Search Your Travel Destination">
-                        <div class="search-button__container">
-                            <button class="search-button__button" type="submit">
-                                <svg class="search-button__img">
-                                    <use xlink:href="images/sprite.svg#search"></use>
-                                </svg>
-                                <span class="search-button__title">Search</span>
-                            </button>
-                        </div>
-                    </form>
-                    <div class="hero-block__scroll-down scroll-down">
-                        <a href="#nav" class="scroll-down__link">
-                            <p class="scroll-down__title">Scroll Down</p>
-                            <svg class="scroll-down__img">
-                                <use xlink:href="images/sprite.svg#chevron-down"></use>
-                            </svg>
-                        </a>
-                    </div>
-                </div>
+<section class="hero">
+    <div class="hero-slider">
+        <div class="hero-slider__item">
+            <img class="hero-slider__img" src="./images/hero-slide.jpg" alt="">
+            <div class="hero__container">
+                <h1 class="hero-slider__title">SIMPLE & MODERN</h1>
+                <p class="hero-slider__text">WE MAKE THE WORLD BEAUTIFUL</p>
             </div>
         </div>
-
-
     </div>
+
 </section>
