almoust ready for JS

--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_footer.html
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_footer.html
@@ -16,14 +16,14 @@
             <div class="social-media__social-media-item social-media-item">
                 <a class="social-media-item__link" href="#">
                     <svg class="social-media-item__image">
-                        <use xlink:href="images/sprite.svg#facebook-f"></use>
+                        <use xlink:href="images/sprite.svg#twitter"></use>
                     </svg>
                 </a>
             </div>
             <div class="social-media__social-media-item social-media-item">
                 <a class="social-media-item__link" href="#">
                     <svg class="social-media-item__image">
-                        <use xlink:href="images/sprite.svg#facebook-f"></use>
+                        <use xlink:href="images/sprite.svg#instagram"></use>
                     </svg>
                 </a>
             </div>
