--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_what-we-do.html
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_what-we-do.html
@@ -3,8 +3,8 @@
     <div class="container">
         <h2 class="wwd-title wwd-main-title">WHAT WE DO</h2>
         <div class="row">
-            <div class="col-7 right">
-                <div class="wwd-image-wrapper wwd-pseudoelement-wrapper-left">
+            <div class="col-7">
+                <div class="wwd-image-wrapper wwd-pseudoelement-wrapper-left right">
                     <img class="wwd-image" src="images/sphere-house.jpg" alt="sphere-house">
                 </div>
             </div>
@@ -26,8 +26,12 @@
             </div>
         </div>
 
-        <div class="row">
-
+        <div class="row reverse">
+            <div class="col-7">
+                <div class="wwd-image-wrapper wwd-pseudoelement-wrapper-right">
+                    <img class="wwd-image" src="images/brick-house.jpg" alt="sphere-house">
+                </div>
+            </div>
             <div class="col-5">
                 <p class="wwd-subtitle">INTERNATIONAL </p>
                 <h3 class="wwd-title">COMMERCE CENTRE</h3>
@@ -44,11 +48,7 @@
                     <p class="wwd-location__decription">New York City, United States - 1776 feet</p>
                 </div>
             </div>
-            <div class="col-7">
-                <div class="wwd-image-wrapper wwd-pseudoelement-wrapper-right">
-                    <img class="wwd-image" src="images/brick-house.jpg" alt="sphere-house">
-                </div>
-            </div>
+
         </div>
     </div>
 </section>
