--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_hero-block.html
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_hero-block.html
@@ -1,12 +1,35 @@
 <section class="hero">
     <div class="hero-slider">
         <div class="hero-slider__item">
-            <img class="hero-slider__img" src="./images/hero-slide.jpg" alt="">
-            <div class="hero__container">
+            <img class="hero-slider__img" src="images/hero-slide.jpg" alt="">
+            <div class="container hero-slider__container">
                 <h1 class="hero-slider__title">SIMPLE & MODERN</h1>
                 <p class="hero-slider__text">WE MAKE THE WORLD BEAUTIFUL</p>
             </div>
         </div>
+        <div class="hero-slider__item">
+            <img class="hero-slider__img" src="images/broad.jpg" alt="">
+            <div class="hero__container">
+                <h2 class="hero-slider__title">SIMPLE & MODERN</h2>
+                <p class="hero-slider__text">WE MAKE THE WORLD BEAUTIFUL</p>
+            </div>
+        </div>
+        <div class="hero-slider__item">
+            <img class="hero-slider__img" src="images/broad.jpg" alt="">
+            <div class="hero__container">
+                <h2 class="hero-slider__title">SIMPLE & MODERN</h2>
+                <p class="hero-slider__text">WE MAKE THE WORLD BEAUTIFUL</p>
+            </div>
+        </div>
+        <div class="hero-slider__item">
+            <img class="hero-slider__img" src="images/broad.jpg" alt="">
+            <div class="hero__container">
+                <h2 class="hero-slider__title">SIMPLE & MODERN</h2>
+                <p class="hero-slider__text">WE MAKE THE WORLD BEAUTIFUL</p>
+            </div>
+        </div>
+
+
     </div>
 
 </section>
