--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/index.html
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/index.html
@@ -26,7 +26,7 @@
     <footer class="footer">
         @@include('_footer.html')
     </footer>
-
+    <script src="js/script.js"></script>
 </body>
 
 </html>
