--- a/students/savchak_marharyta/exam_1/src/why_choose_us.html
+++ b/students/savchak_marharyta/exam_1/src/why_choose_us.html
@@ -14,8 +14,8 @@
                 </div>
             </div>
             <div class="col-4">
-                <img src="" alt="" class="why-choose-us__img">
-                <img src="" alt="" class="why-choose-us__img">
+                <img src="images/house-near-the-lake.png" alt="house near the lake" class="why-choose-us__img">
+                <img src="images/why-choose-us-img.png" alt="mountains" class="why-choose-us__img">
             </div>
         </div>
     </div>
