--- a/students/umienchuk_oksana/project_second_monticello/src/html/_gallery.html
+++ b/students/umienchuk_oksana/project_second_monticello/src/html/_gallery.html
@@ -1,3 +1,44 @@
-<section>
-
+<section class="gallery">
+    <h2 class="gallery__title">GALLERY</h2>
+    <div class="parent">
+        <div class="div1">
+            <img src="../images/gallery-img-01.jpg" alt="">
+        </div>
+        <div class="div2">
+            <img src="../images/gallery-img-02.jpg" alt="">
+        </div>
+        <div class="div3">
+            <img src="../images/gallery-img-03.jpg" alt="">
+        </div>
+        <div class="div4">
+            <img src="../images/gallery-img-04.jpg" alt="">
+        </div>
+        <div class="div5">
+            <img src="../images/gallery-img-05.jpg" alt="">
+        </div>
+        <div class="div6">
+            <img src="../images/gallery-img-01.jpg" alt="">
+        </div>
+        <div class="div7">
+            <img src="../images/gallery-img-02.jpg" alt="">
+        </div>
+        <div class="div8">
+            <img src="../images/gallery-img-03.jpg" alt="">
+        </div>
+        <div class="div9">
+            <img src="../images/gallery-img-04.jpg" alt="">
+        </div>
+        <div class="div10">
+            <img src="../images/gallery-img-05.jpg" alt="">
+        </div>
+        <div class="div11">
+            <img src="../images/gallery-img-01.jpg" alt="">
+        </div>
+        <div class="div12">
+            <img src="../images/gallery-img-02.jpg" alt="">
+        </div>
+        <div class="div13">
+            <img src="../images/gallery-img-03.jpg" alt="">
+        </div>
+    </div>
 </section>
