nav js additing

--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_carusel-item.html
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_carusel-item.html
@@ -6,6 +6,7 @@
         <h3 class="c-item__title">@@item-title</h3>
         <p class="c-item__description">@@item-description</p>
         <div class="c-item__user-wrapper">
+            <!-- <div class="row"> -->
             <div class="col-3">
                 <div class="c-item__user-image-wrapper">
                     <img class="c-item__user-image" src="@@user-image" alt="@@user-image-alt">
@@ -15,6 +16,7 @@
                 <p class="c-item__user-name">@@user-name</p>
                 <p class="c-item__date">@@date</p>
             </div>
+            <!-- </div> -->
         </div>
     </div>
 </div>
