--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_nav.html
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/_nav.html
@@ -1,11 +1,11 @@
 <div class="container">
     <div class="row">
-        <div class="col-3">
+        <div class="col-3 col-md-4">
             <div class="logo">
                 <img src="images/logo.png" alt="">
             </div>
         </div>
-        <div class="col-6">
+        <div class="col-6 col-md-8">
             <div class="nav">
                 <nav class="menu-wrapper">
                     <button class="menu-open-btn only-mobile" type="button">
@@ -20,29 +20,27 @@
                 </nav>
             </div>
         </div>
-        <div class="col-3">
-            <div class="social-media">
-                <div class="social-media__social-media-item social-media-item">
-                    <a class="social-media-item__link" href="#">
-                        <svg class="social-media-item__image">
-                            <use xlink:href="images/sprite.svg#facebook-f"></use>
-                        </svg>
-                    </a>
-                </div>
-                <div class="social-media__social-media-item social-media-item">
-                    <a class="social-media-item__link" href="#">
-                        <svg class="social-media-item__image">
-                            <use xlink:href="images/sprite.svg#twitter"></use>
-                        </svg>
-                    </a>
-                </div>
-                <div class="social-media__social-media-item social-media-item">
-                    <a class="social-media-item__link" href="#">
-                        <svg class="social-media-item__image">
-                            <use xlink:href="images/sprite.svg#instagram"></use>
-                        </svg>
-                    </a>
-                </div>
+        <div class="menu-social-media col-3">
+            <div class="social-media__social-media-item social-media-item">
+                <a class="social-media-item__link" href="#">
+                    <svg class="social-media-item__image">
+                        <use xlink:href="images/sprite.svg#facebook-f"></use>
+                    </svg>
+                </a>
+            </div>
+            <div class="social-media__social-media-item social-media-item">
+                <a class="social-media-item__link" href="#">
+                    <svg class="social-media-item__image">
+                        <use xlink:href="images/sprite.svg#twitter"></use>
+                    </svg>
+                </a>
+            </div>
+            <div class="social-media__social-media-item social-media-item">
+                <a class="social-media-item__link" href="#">
+                    <svg class="social-media-item__image">
+                        <use xlink:href="images/sprite.svg#instagram"></use>
+                    </svg>
+                </a>
             </div>
         </div>
     </div>
