added changes to footer

--- a/students/hridina_anastasiia/exam_project_2/src/_trade_center.html
+++ b/students/hridina_anastasiia/exam_project_2/src/_trade_center.html
@@ -1,14 +1,16 @@
-<section class="trade__section">
+<section class="trade__section" id="trade_center">
     <div class="container">
         <div class="row">
             <div class="col-12">
                 <p class="trade__title">WHAT WE DO</p>
             </div>
-            <div class="row">
-                <div class="col-6">
-                    <img src="./images/gallery/trade_center.png" alt="Trade Center">
+            <div class="row trade_block">
+                <div class="col-6 col-sm-12">
+                    <div class="square__img">
+                        <img class="trade__img" src="./images/gallery/trade_center.png" alt="Trade Center">
+                    </div>
                 </div>
-                <div class="col-6">
+                <div class="col-6 col-sm-12">
                     <h6 class="trade__heading-small">ONE WORLD</h6>
                     <h3 class="trade__heading-medium">TRADE CENTER</h3>
                     <p class="trade__text">Increasing prosperity in our lives can be accomplished by having the right
