--- a/students/hridina_anastasiia/exam_project_2/src/_footer.html
+++ b/students/hridina_anastasiia/exam_project_2/src/_footer.html
@@ -1,53 +1,52 @@
 <div class="container">
-    <div class="google-map">
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6054.687937872494!2d-73.92780265266633!3d40.64434753965324!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25cbc554c53e1%3A0x13ddf424560403a4!2sThe%20Wyckoff%20House%20Museum!5e0!3m2!1suk!2sua!4v1694885007768!5m2!1suk!2sua"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
-
     <div class="row contact__card">
         <div class="col-12">
             <h3 class="contact__heading">GET IN TOUCH</h3>
         </div>
-        <div class="col-6">
-            <p class="contact__address">
-                <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512">
-                    <path class="ftr__icon"
-                        d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z" />
-                </svg>91 Nolan Extensions Suite 670
-            </p>
-            <a class="contact__address" href="tel:#">
-                <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
-                    <path class="ftr__icon" d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0
+        <div class="contacts">
+            <div class="contact__info">
+                <p class="contact__address">
+                    <svg class="ftr__svg" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512">
+                        <path class="ftr__icon"
+                            d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z" />
+                    </svg>91 Nolan Extensions Suite 670
+                </p>
+                <a class="contact__address" href="tel:#">
+                    <svg class="ftr__svg" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
+                        <path class="ftr__icon" d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0
                     33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7
                     368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z" />
-                </svg>+001 356-868-2454</a>
-            <a class="contact__address" href="mailto:#">
-                <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
-                    <path class="ftr__icon"
-                        d="M121 32C91.6 32 66 52 58.9 80.5L1.9 308.4C.6 313.5 0 318.7 0 323.9V416c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V323.9c0-5.2-.6-10.4-1.9-15.5l-57-227.9C446 52 420.4 32 391 32H121zm0 64H391l48 192H387.8c-12.1 0-23.2 6.8-28.6 17.7l-14.3 28.6c-5.4 10.8-16.5 17.7-28.6 17.7H195.8c-12.1 0-23.2-6.8-28.6-17.7l-14.3-28.6c-5.4-10.8-16.5-17.7-28.6-17.7H73L121 96z" />
-                </svg>montichello@service.com</a>
-            <p class="contact__address">
-                <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
-                    <path class="ftr__icon"
-                        d="M464 256A208 208 0 1 1 48 256a208 208 0 1 1 416 0zM0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM232 120V256c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2V120c0-13.3-10.7-24-24-24s-24 10.7-24 24z" />
-                </svg>From 07:05AM to 19:30PM
-            </p>
-        </div>
-        <div class="col-6">
+                    </svg>+001 356-868-2454</a>
+                <br>
+                <a class="contact__address" href="mailto:#">
+                    <svg class="ftr__svg" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
+                        <path class="ftr__icon"
+                            d="M121 32C91.6 32 66 52 58.9 80.5L1.9 308.4C.6 313.5 0 318.7 0 323.9V416c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V323.9c0-5.2-.6-10.4-1.9-15.5l-57-227.9C446 52 420.4 32 391 32H121zm0 64H391l48 192H387.8c-12.1 0-23.2 6.8-28.6 17.7l-14.3 28.6c-5.4 10.8-16.5 17.7-28.6 17.7H195.8c-12.1 0-23.2-6.8-28.6-17.7l-14.3-28.6c-5.4-10.8-16.5-17.7-28.6-17.7H73L121 96z" />
+                    </svg>montichello@service.com</a>
+                <p class="contact__address">
+                    <svg class="ftr__svg" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
+                        <path class="ftr__icon"
+                            d="M464 256A208 208 0 1 1 48 256a208 208 0 1 1 416 0zM0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM232 120V256c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2V120c0-13.3-10.7-24-24-24s-24 10.7-24 24z" />
+                    </svg>From 07:05AM to 19:30PM
+                </p>
+            </div>
             <form class="form" action="#" method="post" autocomplete="off">
-                <input class="ftr__input" type="text" id="fname" name="fullname" placeholder="Fullname">
-                <input class="ftr__input" type="text" id="email" name="email" placeholder="Email">
-                <button class="btn-sm" type="submit">Submit</button>
+                <input class="ftr__input" type="text" id="fname" name="fullname" placeholder="Fullname" value="">
+                <input class="ftr__input" type="text" id="email" name="email" placeholder="Email" value="">
+                <div class="button_footer">
+                    <button class="btn_ftr" type="submit">Submit</button>
+                </div>
             </form>
         </div>
+
     </div>
 
     <div class="footer__links">
-        <img class="ftr__logo" src="./images/logo_mont.png" alt="Logo">
-        <p class="ftr__copyright">Copyrights © 2020 Montichello</p>
-        <div class="footer__links">
+        <div class="logo__container">
+            <img class="ftr__logo" src="./images/logo_mont.png" alt="Logo">
+            <p class="ftr__copyright">Copyrights © 2020 Montichello</p>
+        </div>
+        <div class="social__links_ftr">
             <a href="#" class="social__item_ftr">
                 <svg class="social__svg_ftr">
                     <use xlink:href="./images/facebook__icon.svg#facebook"></use>
