--- a/students/hridina_anastasiia/exam_project_2/src/_gallery.html
+++ b/students/hridina_anastasiia/exam_project_2/src/_gallery.html
@@ -1,17 +1,53 @@
 <section class="gallery__section">
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <h3>GALLERY</h3>
-            </div>
-            <div class="gallery">
-                <img class="gallery-img__lg" src="./images/gallery/gallery-1.png" alt="Image">
-                <img class="gallery-img" src="./images/gallery/gallery2.png" alt="Image">
-                <img class="gallery-img" src="./images/gallery/gallery3.png" alt="Image">
-                <img class="gallery-img" src="./images/gallery/gallery5.png" alt="Image">
-                <img class="gallery-img" src="./images/gallery/gallery4.png" alt="Image">
-                <a class="btn" href="#">See More</a>
-            </div>
+        <div class="container">
+                <div class="row">
+                        <div class="col-12">
+                                <h3 class="gallery__hdr">GALLERY</h3>
+                        </div>
+                        <div class="gallery">
+                                <a class="gallery__img_first" href="./images/gallery/gallery1.jpeg"
+                                        data-lightbox="galleryimage">
+                                        <img class="image" src="./images/gallery/gallery1.jpeg" alt=""></a>
+                                <a class="gallery__img" href="./images/gallery/gallery2.png"
+                                        data-lightbox="galleryimage"><img class="image"
+                                                src="./images/gallery/gallery2.png" alt="Image"></a>
+                                <a class="gallery__img" href="./images/gallery/gallery3.jpeg"
+                                        data-lightbox="galleryimage"><img class="image"
+                                                src="./images/gallery/gallery3.jpeg" alt="Image"></a>
+                                <a class="gallery__img" href="./images/gallery/gallery4.jpeg"
+                                        data-lightbox="galleryimage"><img class="image"
+                                                src="./images/gallery/gallery4.jpeg" alt="Image"></a>
+                                <a class="gallery__img" href="./images/gallery/gallery5.jpeg"
+                                        data-lightbox="galleryimage"><img class="image"
+                                                src="./images/gallery/gallery5.jpeg" alt="Image"></a>
+                                <a class="gallery__img-extra" href="./images/gallery/gallery1.jpeg"
+                                        data-lightbox="galleryimage"><img class="item hidden-item hidden"
+                                                src="./images/gallery/gallery1.jpeg" alt="Image"></a>
+                                <a class="gallery__img-extra" href="./images/gallery/gallery2.png"
+                                        data-lightbox="galleryimage"><img class="item hidden-item hidden"
+                                                src="./images/gallery/gallery2.png" alt="Image"></a>
+                                <a class="gallery__img-extra" href="./images/gallery/gallery3.jpeg"
+                                        data-lightbox="galleryimage"><img class="item hidden-item hidden"
+                                                src="./images/gallery/gallery3.jpeg" alt="Image"></a>
+                                <a class="gallery__img-extra" href="./images/gallery/gallery4.jpeg"
+                                        data-lightbox="galleryimage"><img class="item hidden-item hidden"
+                                                src="./images/gallery/gallery4.jpeg" alt="Image"></a>
+                                <a class="gallery__img-extra" href="./images/gallery/gallery5.jpeg"
+                                        data-lightbox="galleryimage"><img class="item hidden-item hidden"
+                                                src="./images/gallery/gallery5.jpeg" alt="Image"></a>
+                                <a class="gallery__img-extra" href="./images/gallery/gallery1.jpeg"
+                                        data-lightbox="galleryimage-"><img class="item hidden-item hidden"
+                                                src="./images/gallery/gallery1.jpeg" alt="Image"></a>
+                                <a class="gallery__img-extra" href="./images/gallery/gallery2.png"
+                                        data-lightbox="galleryimage"><img class="item hidden-item hidden"
+                                                src="./images/gallery/gallery2.png" alt="Image"></a>
+                                <a class="gallery__img-extra" href="./images/gallery/gallery3.jpeg"
+                                        data-lightbox="galleryimage"><img class="item hidden-item hidden"
+                                                src="./images/gallery/gallery3.jpeg" alt="Image"></a>
+                        </div>
+                        <div class="gallery__btn">
+                                <button id="button" class="btn-sm more">See More</button>
+                        </div>
+                </div>
         </div>
-    </div>
 </section>
