--- a/students/hridina_anastasiia/exam_project_2/src/_hero_block.html
+++ b/students/hridina_anastasiia/exam_project_2/src/_hero_block.html
@@ -1,60 +1,42 @@
-<div class="container">
-    <div class="row">
-        <div class="col-12">
-            <img src="./images/logo_mont.png" alt="Logo">
-            <nav class="menu-wrapper">
-                <ul class="menu">
-                    <li class="menu__item">
-                        <a class="menu__link" href="#">About Us</a>
-                    </li>
-                    <li class="menu__item">
-                        <a class="menu__link" href="#">Projects</a>
-                    </li>
-                    <li class="menu__item">
-                        <a class="menu__link" href="#">News</a>
-                    </li>
-                    <li class="menu__item">
-                        <a class="menu__link" href="#">Contact</a>
-                    </li>
-                </ul>
-            </nav>
-            <div class="social__links">
-                <a href="#" class="social__item">
-                    <svg class="social__svg">
-                        <use xlink:href="./images/facebook__icon.svg#facebook"></use>
-                    </svg>
-                </a>
-                <a href="#" class="social__item">
-                    <svg class="social__svg">
-                        <use xlink:href="./images/twitter__icon.svg#twitter"></use>
-                    </svg>
-                </a>
-                <a href="#" class="social__item">
-                    <svg class="social__svg">
-                        <use xlink:href="./images/instagram__icon.svg#instagram"></use>
-                    </svg>
-                </a>
-            </div>
-            <div class="hero__title">
-                <h1 class="title__heading first">SIMPLE &amp; MODERN</h1>
+<section class="hero">
+    <div class="hero-slider">
+        <div class="hero-slider__item">
+            <img class="hero-slider__img" src="./images/background/bg-1.png" alt="">
+            <div class="container hero-slider__container">
+                <h1 class="title__heading">SIMPLE &amp; MODERN</h1>
                 <p class="title__text">WE MAKE THE WORLD BEAUTIFUL EVERYDAY</p>
             </div>
-            <div class="hero__title">
-                <h1 class="title__heading second">COZY &amp; CREATIVE</h1>
-                <p class="title__text second-item">DESIGN OF DISTINCTION INSPIRED BY IMAGINATION</p>
+        </div>
+        <div class="hero-slider__item">
+            <img class="hero-slider__img" src="./images/background/bg1_2.jpg" alt="">
+            <div class="container hero-slider__container">
+                <h2 class="title__heading">COZY &amp; CREATIVE</h2>
+                <p class="title__text">DESIGN OF DISTINCTION INSPIRED BY IMAGINATION</p>
             </div>
-            <div class="hero__title">
-                <h1 class="title__heading third">HIGH QUALITY &amp; CUSTOMISABLE</h1>
-                <p class="title__text third-item">RISING ABOVE EXPECTATIONS</p>
+        </div>
+        <div class="hero__slider-item">
+            <img class="hero-slider__img" src="./images/background/bg1_3.jpg" alt="">
+            <div class="container hero-slider__container">
+                <h2 class="title__heading">HIGH QUALITY</h2>
+                <p class="title__text">RISING ABOVE EXPECTATIONS</p>
             </div>
-            <div class="hero__title">
-                <h1 class="title__heading fourth">BUILD &amp; INSPIRE</h1>
-                <p class="title__text fourth-item">WE ARE A POSSIBILITIES COMPANY</p>
+        </div>
+        <div class="hero__slider-item">
+            <img class="hero-slider__img" src="./images/background/bg1_4.jpg" alt="">
+            <div class="container hero-slider__container">
+                <h2 class="title__heading">BUILD &amp; INSPIRE</h2>
+                <p class="title__text">WE ARE A POSSIBILITIES COMPANY</p>
             </div>
-            <div class="hero__title">
-                <h1 class="title__heading fifth">INNOVATIVE ARCHITECTURE</h1>
-                <p class="title__text fifth-item">A NEW VISION OF ARCHTECTURE AND DESIGN</p>
+        </div>
+        <div class="hero__slider-item">
+            <img class="hero-slider__img" src="./images/background/bg1_5.jpg" alt="">
+            <div class="container hero-slider__container">
+                <h2 class="title__heading">INNOVATIVE ARCHITECTURE</h2>
+                <p class="title__text">A NEW VISION OF ARCHTECTURE AND DESIGN</p>
             </div>
         </div>
     </div>
-</div>
+    <div class="arrow">
+        <a class="arrow__down" href="#trade_center"></a>
+    </div>
+</section>
