--- a/students/hridina_anastasiia/exam_project_2/src/index.html
+++ b/students/hridina_anastasiia/exam_project_2/src/index.html
@@ -5,22 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1">
     <title>Monticello</title>
+    <link rel="shortcut icon" href="./images/logo_favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="page">
     <header class="header">
-        @@include('./_hero_block.html')
+        @@include('./_menu.html')
     </header>
     <main class="main">
+        @@include('./_hero_block.html')
         @@include('./_trade_center.html')
         @@include('./_commerce_center.html')
         @@include('./_latest_news.html')
         @@include('./_gallery.html')
+        @@include('./_googlemap.html')
     </main>
     <footer class="footer">
         @@include('./_footer.html')
     </footer>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
